--- a/main.bib
+++ b/main.bib
@@ -63,6 +63,15 @@
   url    = {https://is.muni.cz/th/ts2kg/}
 }
 
+@misc{schindler2021thesis,
+AUTHOR = "Schindler, Ondřej",
+TITLE = "Parciální atomové náboje peptidů [online]",
+YEAR = "2021 [cit. 2023-05-15]",
+TYPE = "Rigorózní práce",
+SCHOOL = "Masarykova univerzita, Přírodovědecká fakulta, Brno",
+URL = "https://is.muni.cz/th/yzf1j/",
+}
+
 @article{wojdyr2022gemmi,
   doi       = {10.21105/joss.04200},
   url       = {https://doi.org/10.21105/joss.04200},
@@ -305,4 +314,19 @@ TYPE = "Disertační práce",
 SCHOOL = "Masarykova univerzita, Fakulta informatiky, Brno",
 NOTE = "SUPERVISOR : Luděk Matyska",
 URL = "https://is.muni.cz/th/gy8gf/",
+}
+
+@article{pernaa2017introduction,
+  title={Introduction to Molecular Modeling in Chemistry Education},
+  author={Pernaa, Johannes and Aksela, Maija and Ghulam, Shenelle Pearl},
+  year={2017},
+  publisher={e-Oppi}
+}
+
+@online{zucconi2016secrets,
+  author = {Zucconi, Alan},
+  title = {The secrets of colour interpolation},
+  year = "2016 [cit. 2023-05-14]",
+  url = {http://web.archive.org/web/20080207010024/http://www.808multimedia.com/winnt/kernel.htm},
+  urldate = {2010-09-30}
 }
