--- a/main.bib
+++ b/main.bib
@@ -53,22 +53,22 @@
   url     = {https://doi.org/10.1038/nmeth.4499}
 }
 
-@mastersthesis{schindler2019thesis,
-  author = {Schindler, Ondřej},
-  title  = {Empirické metody pro výpočet parciálních atomových nábojů [online]},
-  year   = {2019 [cit. 2023-05-08]},
-  type   = {Diplomová práce},
-  school = {Masarykova univerzita, Přírodovědecká fakulta, Brno},
-  note   = {SUPERVISOR : Tomáš Raček, Radka Svobodová},
-  url    = {https://is.muni.cz/th/ts2kg/}
+@MastersThesis{schindler2019thesis,
+AUTHOR = "Schindler, Ondřej",
+TITLE = "Empirické metody pro výpočet parciálních atomových nábojů [online]",
+YEAR = "2019 [cit. 2023-05-15]",
+TYPE = "Master's thesis",
+SCHOOL = "Masaryk University, Faculty of Science, Brno",
+NOTE = "SUPERVISOR : Tomáš Raček, Radka Svobodová",
+URL = "https://is.muni.cz/th/ts2kg/",
 }
 
 @misc{schindler2021thesis,
 AUTHOR = "Schindler, Ondřej",
 TITLE = "Parciální atomové náboje peptidů [online]",
 YEAR = "2021 [cit. 2023-05-15]",
-TYPE = "Rigorózní práce",
-SCHOOL = "Masarykova univerzita, Přírodovědecká fakulta, Brno",
+TYPE = "Advanced Master's thesis",
+SCHOOL = "Masaryk University, Faculty of Science, Brno",
 URL = "https://is.muni.cz/th/yzf1j/",
 }
 
@@ -309,9 +309,9 @@ URL = "https://is.muni.cz/th/yzf1j/",
 @PhdThesis{racek2022thesis,
 AUTHOR = "Raček, Tomáš",
 TITLE = "Empirical methods for calculating partial atomic charges [online]",
-YEAR = "2022 [cit. 2023-05-14]",
-TYPE = "Disertační práce",
-SCHOOL = "Masarykova univerzita, Fakulta informatiky, Brno",
+YEAR = "2022 [cit. 2023-05-15]",
+TYPE = "Doctoral theses, Dissertations",
+SCHOOL = "Masaryk University, Faculty of Informatics, Brno",
 NOTE = "SUPERVISOR : Luděk Matyska",
 URL = "https://is.muni.cz/th/gy8gf/",
 }
