--- a/fi-pdflatex.tex
+++ b/fi-pdflatex.tex
@@ -122,6 +122,7 @@
 \usepackage{pdfpages}
 \usepackage{chemfig}
 \usepackage{listings}
+\usepackage[titletoc]{appendix}
 
 \begin{document}
 
@@ -220,7 +221,7 @@ A chain is a linear sequence of residues within a macromolecule. It represents t
 \section{Partial atomic charges}
 \label{section:partial_atomic_charges}
 
-When two atoms of a molecule form a chemical bond, they share electrons. However, the electrons are not evenly shared between the two atoms due to differences in their electronegativities \footnote[1]{Electronegativity is a measure of an atom's ability to attract electrons towards itself. \cite{racek2022thesis}}. Atoms with higher electronegativities attract electrons more strongly than atoms with lower electronegativities. This uneven distribution of electron density influences the physical properties of the molecule and determines how it interacts with other molecules or substances.One way to represent this uneven distribution of electron density is by assigning partial atomic charges to individual atoms within the molecule. 
+When two atoms of a molecule form a chemical bond, they share electrons. However, the electrons are not evenly shared between the two atoms due to differences in their electronegativities \footnote[1]{Electronegativity is a measure of an atom's ability to attract electrons towards itself. \cite{racek2022thesis}}. Atoms with higher electronegativities attract electrons more strongly than atoms with lower electronegativities. This uneven distribution of electron density influences the physical properties of the molecule and determines how it interacts with other molecules or substances. One way of representing this uneven distribution of electron density is by assigning partial atomic charges to individual atoms within the molecule. 
 
 Partial atomic charges are numerical values assigned to individual atoms within a molecule, representing their contribution to the distribution of electron density. Atoms with higher electronegativities have a partial negative charge, while atoms with lower electronegativities have a partial positive charge. Figure \ref{fig:partial_atomic_charges} shows the partial atomic charges of water (H2O). The partial atomic charges are represented by the red and blue spheres, with the red spheres representing the partial negative charges and the blue spheres representing the partial positive charges. 
 
@@ -228,11 +229,15 @@ There are several applications for partial atomic charges in computational chemi
 
 % TODO: maybe break it up here into a subsection about calculation methods
 
+\subsection{Calculating partial atomic charges}
+
 It is important to note that partial charges are simplify a theoretical concept and cannot be directly measured or observed; they can only be calculated using computational methods. One approach for calculating partial atomic charges is by quantum mechanical methods. However, these methods are computationally expensive and require a lot of computational resources. Another approach is by empirical methods, which are less accurate but faster and more efficient than quantum mechanical methods. \cite{schindler2019thesis}
 
 Empirical methods are an efficient alternative to quantum mechanical methods, which operate at the atomic level rather than directly considering individual electrons or molecular orbitals. These methods aim to produce charges that are comparable to those obtained through quantum mechanical methods while keeping the computational complexity manageable. \cite{racek2022thesis}
 
-There are several empirical methods for calculating partial atomic charges, such as the EEM (Electronegativity Equalization Method), SQE+qp (Semi-Quantitative Electrostatic Potential Method), and MMFF (Merck Molecular Force Field). These methods are based on the assumption that the electron density of a molecule can be approximated by a sum of atomic densities. \cite{racek2022thesis}
+Empirical methods can contain a variety of parameters, such as bond lengths, bond angles, and atomic charges. These parameters are typically derived from experimental data or quantum mechanical calculations. \cite{racek2022thesis}
+
+ChargeFW2 is a C++ application that calculates partial atomic charges using empirical methods. It provides several different methods for calculating partial atomic charges, such as . Additionally, it provides other 
 
 \section{Chemical file formats}
 \label{section:chemical_file_formats}
@@ -880,30 +885,29 @@ Keywords: molecular visualization, molecular structures, partial atomic charges,
 
 \printbibliography[heading=bibintoc]
 
+\renewcommand\appendixname{Appendix}
 \newpage
 \pagenumbering{roman}
-\appendix
 
-\chapter{Source code}
-\label{appendix:source-code}
+\begin{appendices}
+  \chapter{Source code}
+  \label{appendix:source-code}
+  All source code can be found in the attachments. Additionally, the source code can be found on GitHub. Below are the links to the GitHub repositories:
+  \begin{itemize}
+    \item αCharges: \\
+    \url{https://github.com/sb-ncbr/AlphaCharges}
+    \item Atomic Charge Calculator II: \\
+    \url{https://github.com/sb-ncbr/AtomicChargeCalculator2}
+    \item ChargeFW2: \\
+    \url{https://github.com/sb-ncbr/ChargeFW2}
+    \item Mol* viewer plugin: \\
+    \url{https://github.com/MergunFrimen/molstar-partial-charges}
+  \end{itemize}
 
-All source code can be found in the attachments. Additionally, the source code can be found on GitHub. Below are the links to the GitHub repositories:
-
-\begin{itemize}
-  \item αCharges: \\
-  \url{https://github.com/sb-ncbr/AlphaCharges}
-  \item Atomic Charge Calculator II: \\
-  \url{https://github.com/sb-ncbr/AtomicChargeCalculator2}
-  \item ChargeFW2: \\
-  \url{https://github.com/sb-ncbr/ChargeFW2}
-  \item Mol* viewer plugin: \\
-  \url{https://github.com/MergunFrimen/molstar-partial-charges}
-\end{itemize}
-
-\chapter[αCharges paper]{αCharges: partial atomic charges for AlphaFold
-structures in high quality}
-\label{appendix:alpha-charges}
-
-\includepdf[pages=-,width=\textwidth,offset=0cm 0cm]{figures/alphachargespaper.pdf}
+  \chapter[αCharges paper]{αCharges: partial atomic charges for AlphaFold
+  structures in high quality}
+  \label{appendix:alpha-charges}
+  \includepdf[pages=-,offset=0cm 0cm]{figures/alphachargespaper.pdf}
+\end{appendices}
 
 \end{document}
